--- a/assignments/lesson-8/storm-center.html
+++ b/assignments/lesson-8/storm-center.html
@@ -65,7 +65,7 @@
                 </fieldset>
                 <br>
                 <fieldset> 
-                    <div class="fieldTitle">Storm Information:</div>
+                    <h2>Storm Information:</h2></div>
                     <div>
                     <!-- storm date using input of type date -->
                         <label for="stormDate">Date of Storm:</label>
