--- a/assignments/lesson-8/storm-center.html
+++ b/assignments/lesson-8/storm-center.html
@@ -12,6 +12,7 @@
         <link href="styles/small-8.css" type="text/css" rel="stylesheet" />
         <link href="styles/medium-8.css" type="text/css" rel="stylesheet" />
         <link href="styles/large-8.css" type="text/css" rel="stylesheet" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     </head>
 
@@ -137,7 +138,7 @@
                 <div class="nested3">Preston, ID 83263  </div>
                 <div class="nested4">&#9742; </div>
                 <div class="nested5">208-555-6677  </div>
-                <div class="nested6">Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>  </div>
+                <div class="nested6"><i class="fa fa-envelope-o" style="font-size:36px"></i> </div>
                 <div class="nested7"><a href="mailto:cljorgensen.pta@outlook.com">CJorgensen@weekendwarriorweather.com</a> </div>
             </div>
         
