--- a/assignments/lesson-8/storm-center.html
+++ b/assignments/lesson-8/storm-center.html
@@ -134,11 +134,11 @@
         <address >
             <div class="contactMe, clearfix">
                 <div class="nested1"><b>Weekend Warrior Weather</b></div>
-                <div class="nested2">121 S State Street </div>
+                <div class="nested2"><i class="fa fa-map-marker" style="font-size:24px"></i>121 S State Street </div>
                 <div class="nested3">Preston, ID 83263  </div>
-                <div class="nested4">&#9742; </div>
+                <div class="nested4"><i class="fa fa-phone" style="font-size:24px"></i></div>
                 <div class="nested5">208-555-6677  </div>
-                <div class="nested6"><i class="fa fa-envelope-o" style="font-size:36px"></i> </div>
+                <div class="nested6"><i class="fa fa-envelope-o" style="font-size:24px"></i> </div>
                 <div class="nested7"><a href="mailto:cljorgensen.pta@outlook.com">CJorgensen@weekendwarriorweather.com</a> </div>
             </div>
         
