--- a/assignments/lesson-8/thank-you.html
+++ b/assignments/lesson-8/thank-you.html
@@ -41,21 +41,21 @@
         </main>
 
         <address >
-            <div class="contactMe, clearfix">
-                <div class="nested1"><b>Weekend Warrior Weather</b></div>
-                <div class="nested2">121 S State Street </div>
-                <div class="nested3">Preston, ID 83263  </div>
-                <div class="nested4">&#9742; </div>
-                <div class="nested5">208-555-6677  </div>
-                <div class="nested6">&#xe0be;  </div>
-                <div class="nested7"><a href="mailto:cljorgensen.pta@outlook.com">CJorgensen@weekendwarriorweather.com</a> </div>
-            </div>
-        
-            <!--The div element for the map -->
-            <div class="gmap_canvas clearfix">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2960.632220085877!2d-111.87840338417418!3d42.09392887920563!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8754f7ea14d5c557%3A0x4e385fff8a07b494!2s121+S+State+St%2C+Preston%2C+ID+83263!5e0!3m2!1sen!2sus!4v1550136734933"></iframe>
-            </div>
-        </address>
+                <div class="contactMe, clearfix">
+                    <div class="nested1"><b>Weekend Warrior Weather</b></div>
+                    <div class="nested2"><i class="fa fa-map-marker" style="font-size:24px"></i>121 S State Street </div>
+                    <div class="nested3">Preston, ID 83263  </div>
+                    <div class="nested4"><i class="fa fa-phone" style="font-size:24px"></i></div>
+                    <div class="nested5">208-555-6677  </div>
+                    <div class="nested6"><i class="fa fa-envelope-o" style="font-size:24px"></i> </div>
+                    <div class="nested7"><a href="mailto:cljorgensen.pta@outlook.com">CJorgensen@weekendwarriorweather.com</a> </div>
+                </div>
+            
+                <!--The div element for the map -->
+                <div class="gmap_canvas clearfix">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2960.632220085877!2d-111.87840338417418!3d42.09392887920563!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8754f7ea14d5c557%3A0x4e385fff8a07b494!2s121+S+State+St%2C+Preston%2C+ID+83263!5e0!3m2!1sen!2sus!4v1550136734933"></iframe>
+                </div>
+            </address>
 
         <footer>
             &copy; 2019 - Cindy Jorgensen - Location: Alaska -<a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a>
