--- a/assignments/lesson-8/preston-8.html
+++ b/assignments/lesson-8/preston-8.html
@@ -13,6 +13,8 @@
         <link href="styles/medium-8.css" type="text/css" rel="stylesheet" />
         <link href="styles/large-8.css" type="text/css" rel="stylesheet" />
 
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     </head>
 
     <body onLoad="currentDate()">
