--- a/assignments/lesson-8/gallery-8.html
+++ b/assignments/lesson-8/gallery-8.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="en-us">
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -9,9 +9,9 @@
         <link href="styles/normalize.css" type="text/css" rel="stylesheet" />
 
         <!-- This is the link to the CSS file that will be used to format the small and large css files-->
-        <link href="styles/small-7.css" type="text/css" rel="stylesheet" />
-        <link href="styles/medium-7.css" type="text/css" rel="stylesheet" />
-        <link href="styles/large-7.css" type="text/css" rel="stylesheet" />
+        <link href="styles/small-8.css" type="text/css" rel="stylesheet" />
+        <link href="styles/medium-8.css" type="text/css" rel="stylesheet" />
+        <link href="styles/large-8.css" type="text/css" rel="stylesheet" />
 
     </head>
 
