--- a/assignments/lesson-7/gallery-7.html
+++ b/assignments/lesson-7/gallery-7.html
@@ -72,5 +72,6 @@
             <div id="date"></div>
         </footer>
         <script src="scripts/currentdate.js"> </script>
+        <script src="scripts/hamburger.js"></script>
     </body>
 </html>
