--- a/assignments/lesson-8/storm-center.html
+++ b/assignments/lesson-8/storm-center.html
@@ -38,7 +38,7 @@
         </nav>
 
         <main>
-            <form action="thank-you.html" method="get" id="stormReport"> <h1>Storm Report Submission Form</h1>
+            <form action="thanks.html" method="get" id="stormReport"> <h1>Storm Report Submission Form</h1>
                 <fieldset> <h2>Personal Information:</h2>
                     <div>
                         <!-- full name using input of type text and is required and only accepts alpha characters with a minimum of five characters using a regular expression pattern. -->
