--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li>Lesson 6: <a href="assignments/lesson-6/preston-6.html">Preston Weather Page</a></li>
                 <li>Lesson 7: <a href="assignments/lesson-7/preston-7.html">Lesson 7: Preston & Gallery Pages</a></li>
                 <li>Lesson 8: <a href="assignments/lesson-8/Week8-tablebuild.html"> - 1: Building a Table</a></li>
-                <li>Lesson 8: <a href="assignments/lesson-8/storm-center.html">- 2: Storm Center Page</a></li>
+                <li>Lesson 8: <a href="assignments/lesson-8/storm-center.html">- 2: Storm Center & Thanks Page</a></li>
             </ul>
         </main>
         
