--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
                 <li>Lesson 7: <a href="assignments/lesson-7/preston-7.html">Lesson 7: Preston & Gallery Pages</a></li>
                 <li>Lesson 8: <a href="assignments/lesson-8/Week8-tablebuild.html"> - 1: Building a Table</a></li>
                 <li>Lesson 8: <a href="assignments/lesson-8/storm-center.html">- 2: Storm Center & Thanks Page</a></li>
+                <li>Lesson 9: <a href="assignments/lesson-9/practice-w9/superHero.html">-1: JSon Practice</a></li>
+                <li>Lesson 9: <a href="assignments/lesson-9">-2: </a></li>
             </ul>
         </main>
         
