--- a/assignments/lesson-9/practice-w9/hawaii.html
+++ b/assignments/lesson-9/practice-w9/hawaii.html
@@ -6,7 +6,7 @@
     <title>Hawaiian Islands</title>
 
     <link href="https://fonts.googleapis.com/css?family=Faster+One" rel="stylesheet"> 
-    <link rel="stylesheet" href="superHero.css">
+    <link rel="stylesheet" href="hawaii.css" type="text/css">
   </head>
 
   <body onload="hawaii.js">
