--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li>Lesson 8: <a href="assignments/lesson-8/Week8-tablebuild.html"> - 1: Building a Table</a></li>
                 <li>Lesson 8: <a href="assignments/lesson-8/storm-center.html">- 2: Storm Center & Thanks Page</a></li>
                 <li>Lesson 9: <a href="assignments/lesson-9/practice-w9/hawaii.html">-1: JSon Practice</a></li>
-                <li>Lesson 9: <a href="assignments/lesson-9/index.html">-2: </a></li>
+                <li>Lesson 9: <a href="assignments/lesson-9/index.html">-2: Town JSON Data  </a></li>
             </ul>
         </main>
         
