--- a/assignments/lesson-9/index.html
+++ b/assignments/lesson-9/index.html
@@ -28,11 +28,11 @@
             <button onclick="toggleMenu()"> &equiv; </button>
             
             <ul id="menuCenter" class="hide">
-                <li class="menuHome"><a href="../../index.html">  Home</a></li>
+                <li class="menuHome"><a class="active" href="../../index.html">  Home</a></li>
                 <li class="menuPreston"><a href="preston-8.html">Preston</a></li>
                 <li class="menuSodaSprings"><a href="#">Soda Springs</a></li>
                 <li class="menuFishHaven"><a href="#">Fish Haven</a></li>
-                <li class="menuStormCenter"><a class="active" href="#">Storm Center</a></li>
+                <li class="menuStormCenter"><a href="#">Storm Center</a></li>
                 <li class="menuGallery"><a href="gallery-8.html">Gallery</a></li>  
             </ul>
         </nav>
