--- a/assignments/lesson-9/gallery.html
+++ b/assignments/lesson-9/gallery.html
@@ -26,8 +26,8 @@
             <button onclick="toggleMenu()"> &equiv; </button>
             
             <ul id="menuCenter" class="hide">
-                <li><a href="../../index.html">  Home</a></li>
-                <li><a href="preston-8.html">Preston</a></li>
+                <li><a href="index.html">  Home</a></li>
+                <li><a href="preston.html">Preston</a></li>
                 <li><a href="#">Soda Springs</a></li>
                 <li><a href="#">Fish Haven</a></li>
                 <li><a href="storm-center.html">Storm Center</a></li>
