--- a/assignments/lesson-9/index.html
+++ b/assignments/lesson-9/index.html
@@ -12,6 +12,8 @@
         <link href="styles/small-8.css" type="text/css" rel="stylesheet" />
         <link href="styles/medium-8.css" type="text/css" rel="stylesheet" />
         <link href="styles/large-8.css" type="text/css" rel="stylesheet" />
+
+        <!-- This is the link to the icon imagees used. -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     </head>
@@ -29,11 +31,11 @@
             
             <ul id="menuCenter" class="hide">
                 <li class="menuHome"><a class="active" href="../../index.html">  Home</a></li>
-                <li class="menuPreston"><a href="preston-8.html">Preston</a></li>
+                <li class="menuPreston"><a href="preston.html">Preston</a></li>
                 <li class="menuSodaSprings"><a href="#">Soda Springs</a></li>
                 <li class="menuFishHaven"><a href="#">Fish Haven</a></li>
-                <li class="menuStormCenter"><a href="#">Storm Center</a></li>
-                <li class="menuGallery"><a href="gallery-8.html">Gallery</a></li>  
+                <li class="menuStormCenter"><a href="storm-center.html">Storm Center</a></li>
+                <li class="menuGallery"><a href="gallery.html">Gallery</a></li>  
             </ul>
         </nav>
 
