--- a/assignments/lesson-9/preston.html
+++ b/assignments/lesson-9/preston.html
@@ -29,12 +29,12 @@
             <button onclick="toggleMenu()"> &equiv; </button>
             
             <ul id="menuCenter" class="hide">
-                <li class="menuHome"><a href="../../index.html">  Home</a></li>
+                <li class="menuHome"><a href="index.html">  Home</a></li>
                 <li class="menuPreston"><a class="active" href="#">Preston</a></li>
                 <li class="menuSodaSprings"><a href="#">Soda Springs</a></li>
                 <li class="menuFishHaven"><a href="#">Fish Haven</a></li>
                 <li class="menuStormCenter"><a href="storm-center.html">Storm Center</a></li>
-                <li class="menuGallery"><a href="gallery-8.html">Gallery</a></li>  
+                <li class="menuGallery"><a href="gallery.html">Gallery</a></li>  
             </ul>
         </nav>
 
