--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <li>Lesson 8: <a href="assignments/lesson-8/storm-center.html">- 2: Storm Center & Thanks Page</a></li>
                 <li>Lesson 9: <a href="assignments/lesson-9/practice-w9/hawaii.html">-1: JSon Practice</a></li>
                 <li>Lesson 9: <a href="assignments/lesson-9/index.html">-2: Town JSON Data  </a></li>
+                <li>Lesson 10: <a href="assignments/lesson-10/index.html"> -1: Usability Discussion Board</a></li>
             </ul>
         </main>
         
